--- a/templates/index.html
+++ b/templates/index.html
@@ -5,66 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FakeExposé</title>
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+
+    {# bootstrap stylesheet #}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <style>
-        #upload {
-            opacity: 0;
-        }
+    
+    {# main stylesheet #}
+    <link href="static/css/style.css" rel="stylesheet">
 
-        #upload-label {
-            position: absolute;
-            top: 50%;
-            left: 1rem;
-            transform: translateY(-50%);
-        }
-
-        .image-area {
-            border: 3px dashed rgba(0, 128, 128, 0.7);
-            border-radius: 1rem;
-            padding: 1rem;
-            position: relative;
-        }
-
-        .image-area::before {
-            color: #000;
-            font-weight: bold;
-            text-transform: uppercase;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size: 0.8rem;
-            z-index: 1;
-        }
-
-        .image-area img {
-            z-index: 2;
-            position: relative;
-            max-width: 100%;
-            max-height: 20rem;
-            object-fit: contain;
-        }
-
-        #predicted-text {
-            margin-top: 20px;
-            font-size: 1.2em;
-            color: #333;
-        }
-
-        #try-again-button {
-            margin-top: 20px;
-            padding: 10px 20px;
-            background-color: #dc3545;
-            color: white;
-            border-radius: 5px;
-            cursor: pointer;
-            display: none;
-        }
-
-    </style>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <script>
         function checkFileAndSubmit() {
             const fileInput = document.getElementById('upload');
@@ -106,7 +53,7 @@
                         // display the image preview
                         preview.innerHTML = `
                             <div class="image-area">
-                                <img src="${e.target.result}" alt="Image Preview" class="img-fluid rounded shadow-sm" style="max-width: 300px; max-height: 300px;">
+                                <img src="${e.target.result}" alt="Image Preview">
                             </div>`;
                     };
 
@@ -135,7 +82,7 @@
                         const imageURL = canvasElement.toDataURL();
                         preview.innerHTML = `
                             <div class="image-area">
-                                <img src="${imageURL}" alt="Video Preview" class="img-fluid rounded shadow-sm" style="max-width: 300px; max-height: 300px;">
+                                <img src="${imageURL}" alt="Video Preview">
                             </div>`;
                         
                         // revoke object URL to free memory
@@ -165,7 +112,7 @@
 <body>
     <div class="bg-dark" style="background-color: #000;">
         {# nav bar #}
-        <nav class="navbar sticky-top navbar-expand-lg navbar-dark px-5" style="border-bottom: 2px solid #008080; background-color:black">
+        <nav class="navbar sticky-top navbar-expand-lg navbar-dark px-5" id="nav-bar">
             <a class="navbar-brand fw-bold" href="/">
                 <img src="{{ url_for('static', filename='images/logo.png') }}" width="30" height="30" class="d-inline-block align-top" style="margin-left:2.5rem" alt="">
                 FakeExposé
@@ -184,27 +131,25 @@
         </nav>
 
         {# home #}
-        <div 
-            style="display: flex; background:linear-gradient(to bottom, #000000, #008080)"
-            id="home"
-        >
-            <div style="width: 50%; height: 100vh; padding:5rem; align-content:center;">
-                <h1 class="text-white fw-bold display-1" style="margin: 0rem;">FakeExposé</h1>
-                <hr style="color:rgb(14, 193, 193);"></hr>
-                <h4 class="fw-bold" style="margin: 0rem; color: #008080; ">Image and Video Deepfake Detection</h4>
-                <h5 class="text-white" style="margin-top: 2rem;">
-                    Expose deepfake faces with FakeExposé, trained using the neural network VGG19 for 
+        <div id="home">
+            <div class="content">
+                <h1>FakeExposé</h1>
+                <hr style="color:rgb(14, 193, 193);">
+                <h4>Image and Video Deepfake Detection</h4>
+                <h5>
+                    Expose deepfake faces with FakeExposé, trained using the neural network Optimized VGG19 for 
                     accurate detection in images and videos. Upload, preview, and reveal the truth 
                     because authenticity matters.
                 </h5>
             </div>
 
-            <div style="width: 50%; margin:auto;">
-                <div class="text-center" style="background-color: #f9f9f9; border-radius:0.6rem; width:30rem; margin:auto; padding:3rem;">
+            <div id="home-right">
+                <div id="detect-container">
                     
                     {# if no file is uploaded #}
                     {% if not prediction%}
                         <form id="uploadForm" method="POST" enctype="multipart/form-data" action="/detect" onsubmit="return checkFileAndSubmit()">
+
                             {# file upload input #}
                             <div class="input-group mb-3 px-2 py-2 rounded-pill bg-white shadow-sm border">
                                 <input id="upload" type="file" name="image" onchange="readURL(this);" class="form-control border-0">
@@ -231,7 +176,7 @@
                     {% if processed_image %}
                     <div class="mt-4 text-center">
                         <div class="image-area"> 
-                            <img src="{{ url_for('static', filename=processed_image) }}" alt="Uploaded Image" class="img-fluid rounded shadow-sm" style="max-width: 300px; max-height: 300px;" id= "image-area">
+                            <img src="{{ url_for('static', filename=processed_image) }}" alt="Uploaded Image" id= "image-area">
                         </div>
                         <p style="margin-top: 2rem; margin-bottom:0rem;">Prediction: <strong style="color:#008080;">{{ prediction[0] }}</strong></p>
                         <p style="margin-top: 0rem;">Confidence: <strong style="color:#008080;">{{ prediction[1] }}%</strong></p>
@@ -246,7 +191,7 @@
                     {% if prediction and not processed_image %}
                     <div class="mt-4 text-center">
                         <div class="image-area"> 
-                            <img src="{{ url_for('static', filename=uploaded_image) }}" alt="Uploaded Image" class="img-fluid rounded shadow-sm" style="max-width: 300px; max-height: 300px;" id= "image-area">
+                            <img src="{{ url_for('static', filename=uploaded_image) }}" alt="Uploaded Image"id= "image-area">
                         </div>
                         <p style="margin-top: 2rem; margin-bottom:0rem;">No faces detected.</p>
 
@@ -260,58 +205,59 @@
             </div>
         </div>
 
-
-        <div style="background-color: #008080;padding: 3rem; text-align:center;">
+        {# blank space #}
+        <div class="pure-blue" id="blank-space1">
             <div style="margin-bottom: 10rem;"></div>
         </div>
 
         {# about section #}
-        <div style="background-color: #008080;padding: 3rem; text-align:center;" id="about">
-            <div style="margin-bottom: 3rem;"></div>
-            <h1 class="text-white fw-bold display-4" style="margin: 0rem;">How FakeExposé Works</h1>
-            <h5 class="text-white" style="margin-top: 3rem;">
+        <div class="pure-blue" id="about">
+            <div style="padding-bottom: 8rem;"></div>
+            <h1>How FakeExposé Works</h1>
+            <h5>
                 FakeExposé simplifies deepfake detection for images and videos. Here’s how:
             </h5>
 
 
-            <div style="display:flex; align-items:center; justify-content: center; margin-top:5rem;">
+            {# how it works #}
+            <div id="about-container">
 
-                <div style="background-color: transparent; border-radius:1rem; padding:1.5rem; width:20rem; height:25rem;">
+                <div class="about-div">
                     <div> 
-                        <div style="background-color:white; border-radius:50%; height: 100px; width: 100px; display:flex; align-items:center; justify-content: center; margin-left:auto; margin-right:auto"> 
+                        <div class="about-image"> 
                             <img src="{{ url_for('static', filename='images/eye.png') }}" width="50" height="50" alt="">
                         </div>
-                        <p class="fw-bold text-white" style="margin-top:1rem; font-size:1.5rem; margin-bottom:0.3rem;">Upload & Preview</p>
+                        <p class="about-title">Upload & Preview</p>
                     </div>
 
-                    <p style="font-size:0.9rem; font-weight: 600; color: rgb(176, 231, 231);">
+                    <p class="about-text">
                         Upload an image or video, and instantly preview it. For videos, the first frame is displayed for a quick glance.
                     </p>
                 </div>
 
-                <div style="background-color: transparent; border-radius:1rem; padding:1.5rem; width:20rem; height:25rem; margin-left:5rem;">
+                <div class="about-div" id="about-div-margin">
                     <div> 
-                        <div style="background-color:white; border-radius:50%; height: 100px; width: 100px; display:flex; align-items:center; justify-content: center; margin-left:auto; margin-right:auto"> 
+                        <div class="about-image"> 
                             <img src="{{ url_for('static', filename='images/face-scanner.png') }}" width="50" height="50" alt="">
                         </div>
-                        <p class="fw-bold text-white" style="margin-top:1rem; font-size:1.5rem; margin-bottom:0.3rem;">Face Detection</p>
+                        <p class="about-title">Face Detection</p>
                     </div>
 
-                    <p style="font-size:0.9rem; font-weight: 600; color: rgb(176, 231, 231);">
+                    <p class="about-text">
                         Faces are detected and cropped, ready for analysis.
                     </p>
                 </div>
 
-                <div style="background-color: transparent; border-radius:1rem; padding:1.5rem; width:20rem; height:25rem; margin-left:5rem;">
+                <div class="about-div" id="about-div-margin">
                     <div> 
-                        <div style="background-color:white; border-radius:50%; height: 100px; width: 100px; display:flex; align-items:center; justify-content: center; margin-left:auto; margin-right:auto"> 
+                        <div class="about-image"> 
                             <img src="{{ url_for('static', filename='images/analyze.png') }}" width="50" height="50" alt="">
                         </div>
-                        <p class="fw-bold text-white" style="margin-top:1rem; font-size:1.5rem; margin-bottom:0.3rem;">Deepfake Analysis</p>
+                        <p class="about-title">Deepfake Analysis</p>
                     </div>
 
-                    <p style="font-size:0.9rem; font-weight: 600; color:rgb(176, 231, 231);">
-                        Using VGG19, each face is analyzed. 
+                    <p class="about-text">
+                        Using Optimized VGG19, each face is analyzed. 
                         A single fake face marks the whole frame or image as fake, with video predictions based on majority voting.
                     </p>
                 </div>
@@ -320,28 +266,28 @@
 
         </div>
 
-        <div style="background-color: #008080;padding: 3rem; text-align:center;">
+        <div class="pure-blue">
             <div style="margin-bottom: 10rem;"></div>
         </div>
 
         {# team section #}
-        <div style="background:linear-gradient(to bottom, #008080, #000000); text-align:center;padding:3rem;">
-            <h1 class="text-white fw-bold display-4" style="margin: 0rem; margin-top:9rem;">Meet our Team</h1>
-            <h5 class="text-white" style="margin-top: 3rem;">
+        <div id="team">
+            <h1>Meet our Team</h1>
+            <h5>
                 Dedicated computer science major in data science students creating solutions
             </h5>
 
-            <div style="display: flex; justify-content:center; margin-top:6rem;">
-                <div>
+            <div id="team-container">
+                <div class="team-div">
                     <img src="{{ url_for('static', filename='images/tophy.jpg') }}" width="250" height="250" style="border-radius: 50%;" alt="">
-                    <h5 style="color:white; margin-top:1.5rem;">Shane Tophy Linanay</h5>
-                    <p style="color:#008080; font-size:smaller;">stglinganay00110@usep.edu.ph</p>
+                    <h5>Shane Tophy Linanay</h5>
+                    <p>stglinganay00110@usep.edu.ph</p>
                 </div>
 
-                <div style="margin-left:15rem;">
+                <div class="team-div">
                     <img src="{{ url_for('static', filename='images/viancie.jpg') }}" width="250" height="250" style="border-radius: 50%;" alt="">
-                    <h5 style="color:white; margin-top:1.5rem;">Mary Chris Viancie Oceña</h5>
-                    <p style="color:#008080; font-size:smaller;">mcvpocena00113@usep.edu.ph</p>
+                    <h5>Mary Chris Viancie Oceña</h5>
+                    <p>mcvpocena00113@usep.edu.ph</p>
                 </div>
             </div>
         </div>
